# customfont

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  customfont.geode  mod.json  mod.json.bak  mod.json.fix.bak  mod.json.orig  mod.json.test.bak
.github/workflows/: build-release.yml
include/: font_loader.h
package_root/: mod.json
scripts/: package_geode.sh
src/: EmirGui.hpp  font_loader.cpp  main.cpp
